{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 43,
  "lineage": "559a5243-6770-671e-dd07-34c7c43c40a9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bba3c2a609baba53",
            "domain": "vpc",
            "id": "eipalloc-0bba3c2a609baba53",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-34-66-18.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.66.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bba3c2a609baba53",
            "connectivity_type": "public",
            "id": "nat-0d55202ac8e8b4b43",
            "network_interface_id": "eni-0527aa1252ddf2385",
            "private_ip": "10.23.1.82",
            "public_ip": "3.34.66.18",
            "subnet_id": "subnet-0fa7895284ed4c827",
            "tags": {
              "Name": "user23-nat"
            },
            "tags_all": {
              "Name": "user23-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4464620b99d4ae31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d55202ac8e8b4b43",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4464620b99d4ae3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:128215741576:route-table/rtb-0b4464620b99d4ae3",
            "id": "rtb-0b4464620b99d4ae3",
            "owner_id": "128215741576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "user23-Private"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user23-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3168f71e0d09bea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7781c69a0782e89",
            "route_table_id": "rtb-0b4464620b99d4ae3",
            "subnet_id": "subnet-05bbccaec0637ab02"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ec0a4bb07e961e6",
            "route_table_id": "rtb-0b4464620b99d4ae3",
            "subnet_id": "subnet-0f53beb783d3e2f19"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:128215741576:security-group/sg-04887a6303c4d6bdc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04887a6303c4d6bdc",
            "ingress": [],
            "name": "user23-K8S Worker-SG",
            "name_prefix": "",
            "owner_id": "128215741576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "user23-K8S Worker-SG"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user23-K8S Worker-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3168f71e0d09bea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SSH_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH",
            "from_port": 22,
            "id": "sgrule-4158456247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04887a6303c4d6bdc",
            "security_group_rule_id": "sgr-089525cc2278b21b2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.k8s-worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow k8s master",
            "from_port": 0,
            "id": "sgrule-779664869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04887a6303c4d6bdc",
            "security_group_rule_id": "sgr-0b735fc48d5ced863",
            "self": false,
            "source_security_group_id": "sg-0201254ea03615df8",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.k8s-worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:128215741576:subnet/subnet-05bbccaec0637ab02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.23.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bbccaec0637ab02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128215741576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user23-Private Subnet 0"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user23-Private Subnet 0"
            },
            "vpc_id": "vpc-0b3168f71e0d09bea"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:128215741576:subnet/subnet-0f53beb783d3e2f19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.23.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f53beb783d3e2f19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128215741576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user23-Private Subnet 1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user23-Private Subnet 1"
            },
            "vpc_id": "vpc-0b3168f71e0d09bea"
          }
        }
      ]
    }
  ]
}